# lab01_galton_board-HumbertoMesquita

./: CMakeLists.txt  README.md
include/: ssd1306.h  ssd1306_i2c.c
src/: lab-01-galton-board.c  ssd1306_i2c.c
